--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "proyecto_final_backend",
+  "name": "testmock",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "node benchmark.js",
+    "start": "0x server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "artillery": "^2.0.0-27",
+    "autocannon": "^7.10.0",
+    "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1",
-    "nodemon": "^2.0.20",
-    "passport": "^0.6.0"
+    "express-session": "^1.17.3",
+    "forever": "^4.0.3",
+    "log4js": "^6.7.1",
+    "mongoose": "^6.7.0",
+    "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "nodemon": "^2.0.20"
   }
 }
