--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ GOOGLE_KEY_ID ="528826669079-f233ebnr8hkveus2tf7kuciar6ed20uf.apps.googleusercon
 GOOGLE_SECRET_KEY = "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",
 MONGO_URL= 'mongodb+srv://ecommerce:coderhouse@cluster0.qrpyisw.mongodb.net/ecommerce?retryWrites=true&w=majority'
 MODO ='fork'
+EMAIL = 'pablosadura@gmail.com'
+PASSWORD = 'cwbuojiqsoiyhxyo'
