--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "forever": "^4.0.3",
     "log4js": "^6.7.1",
     "mongoose": "^6.7.0",
+    "nodemailer": "^6.8.0",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
