Se agrego productsDB

--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,5 @@ HOST = 'localhost'
 PORT = 8080
 EMAIL = 'pablosadura@gmail.com'
 PASSWORD = 'zlyjgjdvhzdaqguq'
-MONGO_URL= 'mongodb+srv://ecommerce:coderhouse@cluster0.qrpyisw.mongodb.net/ecommerce?retryWrites=true&w=majority'
+MONGO_URL = "mongodb+srv://ecommerce:coderhouse@cluster0.qrpyisw.mongodb.net/ecommerce?retryWrites=true&w=majority"
+
