--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "log4js": "^6.7.1",
     "mongoose": "^6.8.4",
     "nodemailer": "^6.9.0",
