--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.14",
     "chai": "^4.3.7",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
+    "graphql": "^16.6.0",
     "log4js": "^6.7.1",
     "mongoose": "^6.8.4",
     "nodemailer": "^6.9.0",
