--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@graphql-tools/schema": "^9.0.14",
+    "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-openid-connect": "^2.12.0",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "log4js": "^6.7.1",
