--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.0",
+    "auth0-js": "^9.20.1",
     "axios": "^1.2.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
